# dimlpfidex_Hepia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-build.sh  dockerfile  pyproject.toml
.github/workflows/: build.yml
Deep_Fidex/: Appel avec Bologna Guido.docx  HAR.py  HAR_old.py  antecedent.py  constants.py  create_test_version.py  deep_fidex.py  deep_test_sample.txt  dimlpConv.py  dimlpConv_Guido.py  generate_test_Files.py  getImages.py  imageAnalyser.py  imageScan.py  imageScan_train.py  rule.py  test_sample.txt  utils.py
Deep_Fidex/src/: convDimlpFilter.py  generate_rules.py  heatmap.py  imageScan.py  images.py  second_train.py  stats.py  testGPU.py  train.py
common/cpp/src/: rule.h  (+13 more)
dimlp/: CMakeLists.txt
fidex/: CMakeLists.txt
fidex/cpp/: CMakeLists.txt
preact/: crontab.txt  data_generator.py  gb.py  rule_extraction.py  rules_cleaner.py  write_rules_readable.py
preact/src/: antecedant.py  data_helper.py  global_rules.py  patient.py  rule.py  utils.py
tests/: CMakeLists.txt
tests/cpp/src/: parametersTests.cpp
tests/dataset/data/: metrics.json
tests_ressources/: data_helper.py  gb.py  install.sh  main.py  rule_extraction.py  rules_cleaner.py
tests_ressources/config/: denormalization.json  denscls.json  dimlpbt.json  dimlppred.json  fidexglo.json  fidexglorules.json  normalization.json  train_denormalization.json  train_normalization.json
tests_ressources/src/: antecedant.py  constants.py  data_helper.py  global_rules.py  patient.py  rule.py  trainer.py  utils.py
trainings/: batchedFidexGloRules.py  cnnTrn.py  normalization.py
(+87 files in other folders)
